--- a/src/assets/global.css
+++ b/src/assets/global.css
@@ -4,8 +4,14 @@
 .mr-5 {
     margin-right: 5px;
 }
+.mr-10 {
+    margin-right: 10px;
+}
 .mt-5 {
     margin-top: 5px;
+}
+.mt-10 {
+    margin-top: 10px;
 }
 .mb-5 {
     margin-bottom: 5px;
